# RGMC_In-Hand_Manipulation_2024

./: CMakeLists.txt  LICENSE  README.md  cylinder_l.STL  cylinder_m.STL  install.sh  package.xml  requirements.txt
config/: tags_cube.yaml  tags_taskA.yaml  tags_taskB.yaml
config/camera_info/: usb_cam_1080p.yaml
launch/: continuous_detection.launch  single_camera_track.launch  taskA.launch  taskB.launch
models/: cube_l.STL  cube_s.STL
rviz/: eval.rviz
src/: task_eval.py  task_viz.py
task/: taskA.yaml  taskB.yaml
