<?xml version="1.0"?>
<package format="2">
  <name>RGMC_In-Hand_Manipulation_2024</name>
  <version>1.0.0</version>
  <description>Task evaluation for The 9th Robotic Grasping and Manipulation Competition (RGMC)</description>

  <maintainer email="pc45@rice.edu">Podshara Chanrungmaneekul</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>apriltag_ros</build_depend>
  <build_depend>usb_cam</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>usb_cam</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <architecture_independent/>
  </export>
</package>
